# ramulator2_wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs  example_config.yaml  hbm.yaml
configs/: hbm.yaml  hbm2.yaml  hbm3.yaml
cpp/: main.cpp  ramulator2_wrapper.cpp  ramulator2_wrapper.h
src/: lib.rs
