[package]
name = "ramulator2-rs"
version = "0.1.0"
edition = "2018"
authors = ["rubensl@stanford.edu"]
description = "Rust bindings for Ramulator2 DRAM simulator"
license = "MIT"
build = "build.rs"

[dependencies]
bindgen = "0.71.1"
cmake = "0.1.54"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[build-dependencies]
cc = "1.0"
cmake = "0.1.54"
# Uncomment if you want to generate bindings automatically
# bindgen = "0.68"

[dev-dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[[example]]
name = "simple_request"
path = "examples/simple_request.rs"

[[example]]
name = "trace_replay"
path = "examples/trace_replay.rs"

[package.metadata.docs.rs]
features = ["docs"]
